<resources>
    <string name="app_name">Swoosh4</string>
    <string name="WelcomeLogo">WelcomeLogo</string>
    <string name="SwooshLogo">SwooshLogo</string>
    <string name="GoAllIn">GO ALL IN</string>
    <string name="OnGoingAllOut">On Going All Out</string>
    <string name="FindTeam">Find a team in the city and dominate your league</string>
    <string name="GetStarted">GET STARTED</string>
    <string name="DecisionBkg">Decision Background</string>
    <string name="DesiredLeague">Desired League</string>
    <string name="Mens">Mens</string>
    <string name="Womens">Womens</string>
    <string name="Coed">Coed</string>
    <string name="Next">Next</string>
    <string name="IamA">I am a:</string>
    <string name="Beginner">BEGINNER</string>
    <string name="Baller">BALLER</string>
    <string name="Finish">FINISH</string>
    <string name="BackgroundImage">Background Image</string>
    <string name="leagueNextClicked">leagueNextClicked</string>
    <string name="onMensClicked">onMensClicked</string>
    <string name="onWomensClicked">onWomensClicked</string>
    <string name="onCoedClicked">onCoedClicked</string>
    <string name="onBeginnerClick">onBeginnerClick</string>
    <string name="onBallerClick">onBallerClick</string>
    <string name="onSkillFinishClicked">onSkillFinishClicked</string>
    <string name="FinishBkg">Finish Background</string>
</resources>
