<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/DecisionBkg" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="68dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:scaleType="fitCenter" app:layout_constraintHorizontal_bias="0.568"
            android:contentDescription="@string/SwooshLogo" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/DesiredLeague"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" app:layout_constraintTop_toBottomOf="@+id/imageView3"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintHorizontal_bias="0.559" android:textSize="18sp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4">
        <ToggleButton
                android:text="@string/Mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton" android:textOff="@string/Mens"
                android:textOn="@string/Mens" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/Womens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2" android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" android:textOff="@string/Womens" android:textOn="@string/Womens"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:fontFamily="@font/montserrat"/>
        <ToggleButton
                android:text="@string/Coed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/Coed"
                android:textOn="@string/Coed" android:background="@drawable/swoosh_toggle"
                android:textColor="@android:color/white" android:fontFamily="@font/montserrat"/>
    </LinearLayout>
    <Button
            android:text="@string/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/leagueNextBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" app:layout_constraintHorizontal_bias="0.498"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"
            android:fontFamily="@font/montserrat" android:onClick="@string/leagueNextClicked"/>

</android.support.constraint.ConstraintLayout>